@@ -92,6 +92,13 @@ PHP 8.3 UPGRADE NOTES
     Underscores must be encoded as "=5F" in such MIME encoded words.
     (Alex Dowad)
 
+- mysqli:
+  . mysqli_fetch_object now raises a ValueError instead of an Exception when the constructor_args
+    argument is non empty with the class not having constructor.
+- PGSQL:
+  . pg_fetch_object now raises a ValueError instead of an Exception when the constructor_args
+    argument is non empty with the class not having constructor.
+
 - Standard:
   . E_NOTICEs emitted by unserialized() have been promoted to E_WARNING.
     RFC: https://wiki.php.net/rfc/improve_unserialize_error_handling
